# G2

./: '  .gitignore  .gitmodules  .travis.yml  G2.cabal  G2.cabal.save0  GetNthList.smt2  LICENSE  List.lhs  Main.hs  Main_Bernouilli.tix  Main_HigherOrderMath  Main_HigherOrderMath.hs  Main_HigherOrderMath.tix  Main_Main2.tix  README.md  ScriptForHackageRules2.py  TAGS  after.txt  app_run.txt  append2SM^Stdout  base_setup.sh  before.txt  cabal-lh.project  cabal.project  cabal.project.local~0  checkTimes.py  checkt.txt  dump-etc.txt  dump-good.txt  dump-manual.txt  dump-nothing.txt  dump-raw.txt  example.hs  g2.cabal  getNthIntModified  hie.yaml  install_z3.sh  makefile  out  (+23 more)
.github/workflows/: haskell.yaml  haskell.yml  liquid.yaml  plugin.yaml  seqgen.yaml  smtsynth.yaml  sygus.yaml
Profiling/: testsProfiling.sh  testsProfilingNumStates.sh
Q2_res/: dump-nothing.txt  dump-what.txt  q2_meta.sh
Sample/: Sample  Sample.hs
benchmarks-env/: .gitignore  ListQuery.hs  Main.hs  bench-pairs.txt  comparison_for_meeting.txt  fix_lh_errors.py  function_breakdown.py  function_breakdown_latex.py  g2_errors.py  id-file-pairs.txt  illegal.py  results.txt  run_analysis.py  run_analysis2.py  run_analysis_cutoff.py
defs/: PrimDefs.hs
exe/: Main.hs  ToLamG.hs
find-higher-order/: Main.hs
g2m/: Main.hs  TestFunctions.hs
gadt_scripts/: Build_cabal_and_project.py  ScriptForGADTs.py  ScriptForHackageRules2.py  g2_analysis.py
higher_benchmarks/: cabal.project  fc.cabal
higher_benchmarks/chop/: ReverseArgs.hs  SequentialCalls.hs  TwoCalls.hs
higher_benchmarks/new/: Arithmetic.hs  Challenge.hs  SAT.hs
hpc/: Bernouilli.hs  Main2.hs  Main2.lhs  Main_Bernouilli.hs  Main_Main2.hs
id2/: state0.txt  state1.txt  state10.txt  state11.txt  state2.txt  state3.txt  state4.txt  state44.txt  state5.txt  state6.txt  state7.txt  state8.txt  state9.txt
inference/: Main.hs
lh/: Main.hs
lh-dumps/: state0.txt  state1.txt  state10.txt  state11.txt  state12.txt  state13.txt  state14.txt  state15.txt  state16.txt  state17.txt  state18.txt  state19.txt  state2.txt  state20.txt  state21.txt  state22.txt  state23.txt  state24.txt  state25.txt  state26.txt  state27.txt  state28.txt  state29.txt  state3.txt  state30.txt  state31.txt  state32.txt  state33.txt  state34.txt  state35.txt  state36.txt  state37.txt  state38.txt  state39.txt  state4.txt  state40.txt  state41.txt  state42.txt  state43.txt  state44.txt  (+20 more)
log1/: state0.txt  state1.txt  state10.txt  state11.txt  state12.txt  state13.txt  state14.txt  state15.txt  state16.txt  state17.txt  state18.txt  state19.txt  state2.txt  state20.txt  state21.txt  state22.txt  state23.txt  state24.txt  state25.txt  state26.txt  state27.txt  state28.txt  state29.txt  state3.txt  state30.txt  state31.txt  state32.txt  state33.txt  state34.txt  state35.txt  state36.txt  state37.txt  state38.txt  state39.txt  state4.txt  state40.txt  state41.txt  state42.txt  state43.txt  state44.txt  (+17 more)
log1/1/: state57.txt  (+2 more)
nebula/: Main.hs  ZenoSuite.hs
nebula_scripts/: Build_cabal_and_project.py  Build_cabal_project.py  ScriptForGADTs.py  ScriptForHackageRules2.py  g2_analysis.py
paper_examples/: Concat.hs  Intersect.hs  Repl.hs  Replicate.hs  Zip.hs
quasiquote/: Evaluations.hs  Main.hs  MiniLib.hs  SumToN.hs
rewritev/: Main.hs  ZenoSuite.hs
seq-gen/: FloatEq.hs  Main.hs  Test.hs
src/: Main.hs  module Main where
subToPos/: state0.txt
test/: HigherOrderMath.hs  Peano.hs  ares.hs  boolFuncs.hs  bres.hs  bres2.hs  resDatatypes.hs
tests/: CaseTest.hs  DefuncTest.hs  ExecSkip.hs  Expr.hs  FuzzExecution.hs  GetNthTest.hs  HigherOrderMathTest.hs  InputOutputTest.hs  Interface.hs  MergeStateUnitTests.hs  PeanoTest.hs  Reqs.hs  Simplifications.hs  Solver.hs  Test.hs  TestUtils.hs  TypeClassTest.hs  Typing.hs  UFMapTests.hs  UnionFindTests.hs  UnitTests.hs  simpleTest.hs
tests/G2Plugin/Import/: Import.cabal
tests/G2Plugin/Import/src/: MyLib.hs
tests/G2Plugin/Simple/: Simple.cabal  cabal.project
tests/G2Plugin/Simple/app/: FDef.hs  Helper.hs  ImportsHelper.hs  Main.hs
tests/G2Plugin/Strings/: LICENSE  Strings.cabal  cabal.project
tests/G2Plugin/Strings/src/: Strings.hs
tests/RewriteVerify/PluginTests/Simple/: PluginTests.cabal  cabal.project
tests/RewriteVerify/PluginTests/Simple/app/: ImportTest.hs  Main.hs  Nat.hs  Spec.hs  Time.hs
tests_inference/: Test.hs
tests_lh/: InputOutputTest.hs  LHInputOutputTest.hs  LHReqs.hs  LHTest.hs  Test.hs  UnionPoly.hs
tests_nebula_plugin/: Main.hs
tests_plugin/: Main.hs
tests_quasiquote/: Evaluations.hs  Main.hs  MiniLib.hs
tests_seq_gen/: Main.hs
tests_smt_synth/: Main.hs
verification/: Main.hs
verify/: Infinite.hs  Main.hs  QuickCheck.hs
(+8273 files in other folders)
