cabal-version:      2.4
name:               PluginTests
version:            0.1.0.0

synopsis: A test package for the Nebula plugin.
maintainer:         billthallahan@gmail.com
extra-source-files: CHANGELOG.md

executable PluginTests
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Nat

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base >= 4.8.0.0
                      , g2 >= 0.1.0.2
    default-extensions: LambdaCase
    hs-source-dirs:   app
    ghc-options:      -fplugin=G2.Nebula 
    default-language: Haskell2010
